<resources>
	<string name="account">Account Email</string>
	<string name="add">Add</string>
	<string name="additional_info">Additional Information</string>
	<string name="app_name">IFood Admin</string>
	<string name="cancel">Cancel</string>
	<string name="canteen">Canteen</string>
	<string name="canteen_name">Canteen Name</string>
	<string name="completed">Completed</string>
	<string name="default_failed">Sorry.. Something went wrong</string>
	<string name="deliver_to">Deliver To</string>
	<string name="delivery_fee">Delivery Fee</string>
	<string name="dialog_add">Are you sure you want to add this item?</string>
	<string name="dialog_continue">Continue</string>
	<string name="dialog_login">Please sign in to your Google Account to continue order.</string>
	<string name="dialog_update">Are you sure you want to update this item?</string>
	<string name="dialog_remove">Are you sure you want to remove this item?</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="email">Email Address</string>
	<string name="estimated_price">Estimated Price</string>
	<string name="field_empty">All field must not be empty</string>
	<string name="home">Home</string>
	<string name="history_order">History Order</string>
	<string name="in_progress">In Progress</string>
	<string name="location">Location</string>
	<string name="manage_canteen">Manage Canteen</string>
	<string name="manage_menu">Manage Menu</string>
	<string name="menu">Menu</string>
	<string name="menu_name">Menu Name</string>
	<string name="no">No</string>
	<string name="no_internet">No Internet Connection. Please check your connection</string>
	<string name="notes">Notes</string>
	<string name="order">Order</string>
	<string name="order_status">Order %1$s</string>
	<string name="order_items">Order Items</string>
	<string name="password">Password</string>
	<string name="payment_details">Payment Details</string>
	<string name="permission_required">Permission(s) are required to continue the action</string>
	<string name="phone_number">Phone Number</string>
	<string name="picture">Picture</string>
	<string name="price">Price</string>
	<string name="price_rp">Rp.%1$s</string>
	<string name="receiver_name">Receiver Name</string>
	<string name="rejected">Rejected</string>
	<string name="remove">Remove</string>
	<string name="schedule">Schedule</string>
	<string name="sign_in">Sign In</string>
	<string name="sign_in_failed">Wrong email or password</string>
	<string name="sign_in_google">Sign In with Google</string>
	<string name="sign_out">Sign Out</string>
	<string name="select_source">Select Source</string>
	<string name="success_add">Item has been added successfully</string>
	<string name="success_update">Item has been updated successfully</string>
	<string name="success_remove">Item has been removed successfully</string>
	<string name="start_now">Start Now</string>
	<string name="total">Total</string>
	<string name="update">Update</string>
	<string name="upload_picture">Upload Picture</string>
	<string name="verify">Verify</string>
	<string name="verification_code">Verification Code</string>
	<string name="verification_failed">Verification is not correct. Please try to input again or resend code</string>
	<string name="verification_preview">Please confirm with the verification code sent to your phone</string>
	<string name="verification_remark">Please ensure your phone is correct.\nWe will send the verification number to your number.</string>
	<string name="verification_resend">RESEND VERIFICATION CODE</string>
	<string name="verification_resend_alert">Verification code has been resend</string>
	<string name="yes">Yes</string>
</resources>
