<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/content"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/bg_light"
	android:padding="@dimen/activity_horizontal_margin">

	<EditText
		android:id="@+id/editName"
		style="@style/CustomEditText"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:background="@drawable/background_edittext"
		android:hint="@string/menu_name"
		android:inputType="text"
		android:padding="@dimen/item_margin_normal"/>

	<EditText
		android:id="@+id/editPrice"
		style="@style/CustomEditText"
		android:layout_below="@id/editName"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:background="@drawable/background_edittext"
		android:hint="@string/price"
		android:inputType="text"
		android:padding="@dimen/item_margin_normal"/>

	<LinearLayout
		android:id="@+id/imageContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/editPrice"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:orientation="horizontal"
		android:weightSum="1">

		<Button
			android:id="@+id/btnAddImage"
			style="@style/UploadButton"
			android:layout_width="0dp"
			android:layout_weight="0.3"
			android:text="@string/upload_picture"/>

		<TextView
			android:id="@+id/imageLabel"
			style="@style/CustomEditText"
			android:layout_width="0dp"
			android:layout_weight="0.7"
			android:padding="@dimen/item_margin_small"
			android:paddingEnd="@dimen/item_margin_normal"
			android:paddingRight="@dimen/item_margin_normal"
			android:text="@string/picture"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/imageContainer"
		android:layout_marginTop="18dp"
		android:gravity="center"
		android:paddingBottom="@dimen/activity_vertical_margin">

		<Button
			android:id="@+id/btnAdd"
			style="@style/CustomButton"
			android:text="@string/add"/>

		<Button
			android:id="@+id/btnUpdate"
			style="@style/CustomButton"
			android:text="@string/update"
			android:visibility="gone"/>

		<ProgressBar
			android:id="@+id/progressBar"
			style="@style/ProgressBar"
			android:layout_marginBottom="@dimen/activity_vertical_margin"
			android:visibility="gone"/>
	</LinearLayout>
</RelativeLayout>