<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/content"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_light"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context=".fragment.CanteenFragment">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.9"
		android:background="@color/text_light_4"
		android:orientation="vertical"
		android:padding="@dimen/item_margin_small"
		tools:ignore="ContentDescription">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/item_margin_normal">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/bg_clickable_bordered_normal"
				android:orientation="vertical">

				<TextView
					style="@style/BodyMedium"
					android:layout_margin="@dimen/item_margin_normal"
					android:text="@string/order_items"/>

				<View
					android:id="@+id/separator1"
					style="@style/SeparatorLayout"
					android:layout_marginTop="@dimen/item_margin_small"/>

				<android.support.v7.widget.RecyclerView
					android:id="@+id/listCanteen"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/item_margin_small"
					android:scrollbars="vertical"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/item_margin_normal"
				android:background="@drawable/bg_clickable_bordered_normal"
				android:orientation="vertical">

				<TextView
					style="@style/BodyMedium"
					android:layout_margin="@dimen/item_margin_normal"
					android:text="@string/additional_info"/>

				<View
					android:id="@+id/separator2"
					style="@style/SeparatorLayout"
					android:layout_marginTop="@dimen/item_margin_small"/>

				<EditText
					android:id="@+id/editReceiver"
					style="@style/CustomEditText"
					android:layout_marginTop="@dimen/item_margin_small"
					android:background="@drawable/background_edittext"
					android:hint="@string/receiver_name"
					android:inputType="text"
					android:padding="@dimen/item_margin_normal"/>

				<EditText
					android:id="@+id/editDeliver"
					style="@style/CustomEditText"
					android:layout_marginTop="@dimen/item_margin_small"
					android:background="@drawable/background_edittext"
					android:gravity="start"
					android:hint="@string/deliver_to"
					android:inputType="textMultiLine"
					android:lines="2"
					android:padding="@dimen/item_margin_normal"/>

				<EditText
					android:id="@+id/editNotes"
					style="@style/CustomEditText"
					android:layout_marginTop="@dimen/item_margin_small"
					android:background="@drawable/background_edittext"
					android:gravity="left"
					android:hint="@string/notes"
					android:inputType="textMultiLine"
					android:lines="2"
					android:padding="@dimen/item_margin_normal"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/item_margin_normal"
				android:background="@drawable/bg_clickable_bordered_normal"
				android:orientation="vertical"
				android:paddingBottom="@dimen/item_margin_normal">

				<TextView
					style="@style/BodyMedium"
					android:layout_margin="@dimen/item_margin_normal"
					android:text="@string/payment_details"/>

				<View
					android:id="@+id/separator3"
					style="@style/SeparatorLayout"
					android:layout_marginBottom="@dimen/item_margin_normal"
					android:layout_marginTop="@dimen/item_margin_small"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/item_margin_normal"
					android:layout_marginRight="@dimen/item_margin_large"
					android:weightSum="1">

					<TextView
						android:id="@+id/priceText"
						style="@style/BodyRegular"
						android:layout_width="0dp"
						android:layout_weight="0.8"
						android:text="@string/price"/>

					<TextView
						android:id="@+id/price"
						style="@style/BodyMedium"
						android:layout_width="0dp"
						android:layout_weight="0.2"
						android:gravity="end"
						tools:text="58.000"/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/item_margin_normal"
					android:layout_marginRight="@dimen/item_margin_large"
					android:layout_marginTop="@dimen/item_margin_small"
					android:weightSum="1">

					<TextView
						android:id="@+id/feeText"
						style="@style/BodyRegular"
						android:layout_width="0dp"
						android:layout_weight="0.8"
						android:text="@string/delivery_fee"/>

					<TextView
						android:id="@+id/fee"
						style="@style/BodyMedium"
						android:layout_width="0dp"
						android:layout_weight="0.2"
						android:gravity="end"
						tools:text="2.000"/>
				</LinearLayout>

				<View
					android:id="@+id/separator4"
					style="@style/SeparatorLayout"
					android:layout_marginBottom="@dimen/item_margin_normal"
					android:layout_marginTop="@dimen/item_margin_normal"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/item_margin_normal"
					android:layout_marginRight="@dimen/item_margin_large"
					android:weightSum="1">

					<TextView
						android:id="@+id/totalText"
						style="@style/SubheadingRegular"
						android:layout_width="0dp"
						android:layout_weight="0.8"
						android:text="@string/total"/>

					<TextView
						android:id="@+id/total"
						style="@style/SubheadingMedium"
						android:layout_width="0dp"
						android:layout_weight="0.2"
						android:gravity="end"
						tools:text="60.000"/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

	<RelativeLayout
		android:id="@+id/buttonContainer"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginBottom="@dimen/item_margin_normal"
		android:layout_weight="0.1">

		<Button
			android:id="@+id/btnConfirm"
			style="@style/CustomButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:text="@string/order"
			android:visibility="visible"/>

		<Button
			android:id="@+id/btnCancel"
			style="@style/CustomButtonRemove"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:text="@string/cancel"
			android:visibility="gone"/>

		<Button
			android:id="@+id/btnProgress"
			style="@style/CustomButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:text="@string/on_progress"
			android:visibility="gone"/>

		<Button
			android:id="@+id/btnCompleted"
			style="@style/CustomButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:text="@string/completed"
			android:visibility="gone"/>

		<ProgressBar
			android:id="@+id/progressBar"
			style="@style/ProgressBar"
			android:visibility="gone"/>
	</RelativeLayout>
</LinearLayout>